tests/negative/neg_send_use_after_move.safe
-- Test: neg_send_use_after_move
-- Description: send moves an owning access source immediately.
-- Expected: REJECT use_after_move

package Neg_Send_Use_After_Move is

   type Payload is record
      Value : Integer;
   end record;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   procedure Run is
      Source : Payload_Ptr = new ((Value = 1) as Payload);
   begin
      send Data_Ch, Source;
      Source.all.Value = 2;
   end Run;

end Neg_Send_Use_After_Move;
